bk_ida/gccida/g2/gen_split_1088
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1088/src/insn-emit.c:12429:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), operands[1]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1088/src/insn-emit.c:12432:61: error: use of undeclared identifier 'machine_mode'
v3 = trunc_int_for_mode( 1 << operands[2]->fld[0].rtwint, ( machine_mode)( !v2 + 4)); 
                                                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1088/src/obj/insn-emit.o] Error 1
